Fix styles for overflow embed block Scrollbar now looks correct and the embed block looks correct

--- a/less/base.less
+++ b/less/base.less
@@ -324,7 +324,7 @@ hr {
 article .post-container blockquote {
 	overflow-y: auto !important;
 	overflow-x: hidden;
-	padding-right: 10px;
+	padding-right: 16px;
 }
 .index-thread article .post-container blockquote {
 	max-height: 600px !important;
