--- a/less/posts.mix.less
+++ b/less/posts.mix.less
@@ -70,7 +70,7 @@ code.code-tag {
 .embed {
 	background-color: rgba(255, 255, 255, 0.5);
 	border-radius: 4px;
-	display: block;
+	display: inline-block;
 	font-style: normal;
 	margin: 0.1em;
 	padding: 2px;
